--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -4,30 +4,21 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:binding="clr-namespace:Projekatv2.Binding"
     NavigationPage.HasNavigationBar="False " BackgroundImageSource="pocetna.png"
-    
     BackgroundColor="#F8F8F8">
-
-    <!-- Resources -->
+    
     <ContentPage.Resources>
         <ResourceDictionary>
             <binding:CategoryToColorConverter x:Key="CategoryToColorConverter"/>
         </ResourceDictionary>
     </ContentPage.Resources>
-   
-
-
-    <!-- BindingContext -->
+  
     <ContentPage.BindingContext>
         <binding:Home />
     </ContentPage.BindingContext>
 
     <ScrollView>
         <VerticalStackLayout Spacing="15" Padding="15">
-
-            <!-- HEADER: Hamburger | Logo + Naziv | Pretraga -->
             <Grid Padding="5" ColumnDefinitions="Auto,*,Auto" VerticalOptions="Start" HorizontalOptions="Fill">
-
-                <!-- Hamburger ikona -->
                 <ImageButton Source="hamburger.png"
                              WidthRequest="30"
                              HeightRequest="30"
@@ -38,7 +29,7 @@
                              HorizontalOptions="Start"
                              VerticalOptions="Center"/>
 
-                <!-- Logo i naziv -->
+
                 <HorizontalStackLayout Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center" Spacing="10">
                     <Image Source="logo.png" HeightRequest="60" WidthRequest="60"/>
                     <Label Text="Slatki zalogaj"
@@ -49,8 +40,7 @@
                            VerticalOptions="Center"
                            />
                 </HorizontalStackLayout>
-
-                <!-- Pretraga / lupa -->
+                
                 <ImageButton Source="search.png"
                              WidthRequest="40"
                              HeightRequest="40"
@@ -61,7 +51,7 @@
                              VerticalOptions="Center" Scale="0.5"/>
             </Grid>
 
-            <!-- SLIDER -->
+           
             <Frame CornerRadius="20" BackgroundColor="White" HasShadow="True" Padding="0">
                 <CarouselView ItemsSource="{Binding FeaturedImages}" HeightRequest="180" Loop="True">
                     <CarouselView.ItemTemplate>
@@ -72,7 +62,7 @@
                 </CarouselView>
             </Frame>
 
-            <!-- NAJPRODAVANIJI PROIZVODI -->
+          
             <Label Text="Najprodavaniji proizvodi"
        FontSize="20"
        FontAttributes="Bold"
@@ -91,7 +81,7 @@
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
                                 
-                                <!-- Moderni frame sa shadow i gradientom -->
+                             
                                 <Frame Padding="0"
                            CornerRadius="25"
                            Margin="5"
@@ -108,29 +98,26 @@
                                     </Frame.GestureRecognizers>
 
                                     <Grid>
-                                        <!-- Gradient pozadina -->
+                                      
                                         <Grid.Background>
                                             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                                 <GradientStop Color="#4B6CB7" Offset="0.0"/>
-                                                <!-- plava nijansa -->
                                                 <GradientStop Color="#182848" Offset="1.0"/>
-                                                <!-- tamnija plava -->
                                             </LinearGradientBrush>
                                         </Grid.Background>
 
                                         <VerticalStackLayout Spacing="8" Padding="8" HorizontalOptions="Center" VerticalOptions="Center">
-                                            <!-- Slika -->
+                                           
                                             <Frame CornerRadius="15" HasShadow="True" Padding="0" HeightRequest="100" WidthRequest="120" IsClippedToBounds="True">
                                                 <Image Source="{Binding Image}" Aspect="AspectFill"/>
                                             </Frame>
 
-                                            <!-- Naziv -->
+                                         
                                             <Label Text="{Binding Name}" FontAttributes="Bold" FontSize="14" HorizontalOptions="Center" TextColor="White" LineBreakMode="TailTruncation"/>
 
-                                            <!-- Cijena -->
-                                            <Label Text="{Binding Price, StringFormat='{}{0} KM'}" FontSize="12" HorizontalOptions="Center" TextColor="white"/>
 
-                                            <!-- Dugme Naruči -->
+                                            <Label Text="{Binding Price, StringFormat='{}{0} KM'}" FontSize="12" HorizontalOptions="Center" TextColor="white"/>
+                                            
                                             <Button Text="Naruči"
                                         FontSize="12"
                                         WidthRequest="80"
@@ -155,40 +142,25 @@
             <!-- KATEGORIJE -->
             <ScrollView Orientation="Horizontal" HorizontalScrollBarVisibility="Never">
                 <HorizontalStackLayout Spacing="10" Padding="0,10">
-                    <Button Text="Palacinci"
-                            CornerRadius="15"
-                            BorderColor="#F4B400"
-                            BorderWidth="2"
-                            TextColor="Black"
-                            BackgroundColor="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Palacinci}"
-                            Command="{Binding SelectCategoryCommand}" 
-                            CommandParameter="Palacinci"/>
-                    <Button Text="Holandski palacinci"
-                            CornerRadius="15"
-                            BorderColor="#F4B400"
-                            BorderWidth="2"
-                            TextColor="Black"
-                            BackgroundColor="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Holandski}"
-                            Command="{Binding SelectCategoryCommand}" 
-                            CommandParameter="Holandski"/>
-                    <Button Text="Pića"
-                            CornerRadius="15"
-                            BorderColor="#F4B400"
-                            BorderWidth="2"
-                            TextColor="Black"
-                            BackgroundColor="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Pića}"
-                            Command="{Binding SelectCategoryCommand}" 
-                            CommandParameter="Pića"/>
-                    <Button Text="Wafl"
-                            CornerRadius="15"
-                            BorderColor="#F4B400"
-                            BorderWidth="2"
-                            TextColor="Black"
-                            BackgroundColor="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Wafl}"
-                            Command="{Binding SelectCategoryCommand}" 
-                            CommandParameter="Wafl"/>
+                    <Button x:Name="BtnPalacinci" Text="Palacinci" CornerRadius="15" BorderColor="#F4B400" BorderWidth="2" TextColor="Black" 
+                Background="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Palacinci}"
+                Command="{Binding SelectCategoryCommand}" CommandParameter="Palacinci"
+                Clicked="Category_Clicked"/>
+                    <Button x:Name="BtnHolandski" Text="Holandski palacinci" CornerRadius="15" BorderColor="#F4B400" BorderWidth="2" TextColor="Black" 
+                Background="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Holandski}"
+                Command="{Binding SelectCategoryCommand}" CommandParameter="Holandski"
+                Clicked="Category_Clicked"/>
+                    <Button x:Name="BtnPica" Text="Pića" CornerRadius="15" BorderColor="#F4B400" BorderWidth="2" TextColor="Black" 
+                Background="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Pića}"
+                Command="{Binding SelectCategoryCommand}" CommandParameter="Pića"
+                Clicked="Category_Clicked"/>
+                    <Button x:Name="BtnWafl" Text="Wafl" CornerRadius="15" BorderColor="#F4B400" BorderWidth="2" TextColor="Black" 
+                Background="{Binding SelectedCategory, Converter={StaticResource CategoryToColorConverter}, ConverterParameter=Wafl}"
+                Command="{Binding SelectCategoryCommand}" CommandParameter="Wafl"
+                Clicked="Category_Clicked"/>
                 </HorizontalStackLayout>
             </ScrollView>
+
 
             <!-- LISTA PROIZVODA -->
             <CollectionView ItemsSource="{Binding FilteredProducts}">
@@ -200,29 +172,27 @@
                             </Frame.GestureRecognizers>
                             <Grid ColumnDefinitions="90,*,100" RowDefinitions="Auto,Auto,Auto">
 
-                                <!-- Slika sa corner radius i gradient pozadina -->
+                              
                                 <Frame CornerRadius="15" HasShadow="False" Padding="0" HeightRequest="90" WidthRequest="90" IsClippedToBounds="True" Grid.RowSpan="3" Grid.Column="0">
                                     <Frame.Background>
                                         <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                                             <GradientStop Color="#FFF8E1" Offset="0.0"/>
-                                            <!-- svijetli bež -->
                                             <GradientStop Color="#F5E0C3" Offset="1.0"/>
-                                            <!-- malo jači bež -->
                                         </LinearGradientBrush>
                                     </Frame.Background>
                                     <Image Source="{Binding Image}" Aspect="AspectFill" />
                                 </Frame>
 
-                                <!-- Naziv -->
+                               
                                 <Label Text="{Binding Name}" FontSize="16" FontAttributes="Bold" Grid.Row="0" Grid.Column="1" Margin="7" TextColor="#5C4033"/>
 
-                                <!-- Opis -->
+                              
                                 <Label Text="{Binding Description}" FontSize="13" TextColor="Gray" Grid.Row="1" Grid.Column="1" LineBreakMode="TailTruncation" Margin="7"/>
 
-                                <!-- Cijena -->
+                              
                                 <Label Text="{Binding Price, StringFormat='{}{0} KM'}" FontAttributes="Bold" TextColor="#F4B400" FontSize="14" Grid.Row="2" Grid.Column="1" Margin="7"/>
 
-                                <!-- Dugme Naruci -->
+                              
                                 <Button Text="Naruci" BackgroundColor="#F4B400" TextColor="#5C4033" CornerRadius="17" Grid.RowSpan="3" Grid.Column="2"
                             VerticalOptions="End"
                             Command="{Binding Source={RelativeSource AncestorType={x:Type CollectionView}}, Path=BindingContext.AddToCartCommand}"
