--- a/Views/CartPage.xaml
+++ b/Views/CartPage.xaml
@@ -11,19 +11,16 @@
         <binding:Korpa />
     </ContentPage.BindingContext>
 
-    <!-- GRID -->
+  
     <Grid RowDefinitions="Auto,*,Auto" Padding="16">
 
-        <!-- HEADER -->
         <StackLayout Grid.Row="0" Spacing="8" Margin="0,0,0,16">
 
-            <Label Text="←"
-                   FontSize="25"
-                   TextColor="#5C4033">
-                <Label.GestureRecognizers>
+            <Image Source="arrow.png" HeightRequest="20" WidthRequest="20" HorizontalOptions="Start">
+                <Image.GestureRecognizers>
                     <TapGestureRecognizer Tapped="OnBackToHome"/>
-                </Label.GestureRecognizers>
-            </Label>
+                </Image.GestureRecognizers>
+            </Image>
 
             <Label Text="Vaša korpa"
                    FontSize="28"
@@ -31,7 +28,7 @@
                    TextColor="#5C4033"/>
         </StackLayout>
 
-        <!-- PRAZNA KORPA -->
+     
         <StackLayout
             x:Name="EmptyCart"
             Grid.Row="1"
@@ -47,7 +44,7 @@
                 HorizontalOptions="Center"/>
         </StackLayout>
 
-        <!-- LISTA PROIZVODA -->
+    
         <CollectionView
             x:Name="CartCollection"
             Grid.Row="1"
@@ -61,13 +58,13 @@
                            Padding="10"
                            Margin="0,0,0,12"
                            BackgroundColor="White"
-                           HasShadow="True">
+                           HasShadow="True" BorderColor="#F4B400">
 
-                        <Grid ColumnDefinitions="90,70,Auto"
+                        <Grid ColumnDefinitions="90,71,Auto"
                               RowDefinitions="Auto,Auto,Auto"
                               ColumnSpacing="10">
 
-                            <!-- SLIKA -->
+                         
                             <Frame CornerRadius="15"
                                    HasShadow="False"
                                    Padding="0"
@@ -85,7 +82,7 @@
                                 <Image Source="{Binding Image}" Aspect="AspectFill"/>
                             </Frame>
 
-                            <!-- NAZIV -->
+                          
                             <Label Text="{Binding Name}"
                                    FontSize="16"
                                    FontAttributes="Bold"
@@ -93,7 +90,7 @@
                                    Grid.Column="1"
                                    TextColor="#5C4033"/>
 
-                            <!-- OPIS -->
+                           
                             <Label Text="{Binding Category}"
                                    FontSize="13"
                                    TextColor="Gray"
@@ -101,7 +98,7 @@
                                    Grid.Column="1"
                                    LineBreakMode="TailTruncation"/>
 
-                            <!-- CIJENA -->
+                            
                             <Label Text="{Binding Price, StringFormat='{}{0} KM'}"
                                    FontAttributes="Bold"
                                    TextColor="#F4B400"
@@ -109,7 +106,7 @@
                                    Grid.Row="2"
                                    Grid.Column="1"/>
 
-                            <!-- KONTROLE -->
+                          
                             <HorizontalStackLayout
                                 Grid.Row="0"
                                 Grid.RowSpan="3"
@@ -155,7 +152,7 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <!-- DONJI SUMMARY -->
+        
         <Frame Grid.Row="2"
                Padding="16"
                CornerRadius="18"
@@ -164,13 +161,13 @@
 
             <StackLayout Spacing="12">
 
-                <Grid ColumnDefinitions="*,Auto">
-                    <Label Text="Ukupno" FontSize="16"/>
+              
+                    <Label Text="Ukupno:" FontSize="16" FontAttributes="Bold"/>
                     <Label Text="{Binding TotalPrice, StringFormat='{0} KM'}"
                            FontSize="18"
                            FontAttributes="Bold"
                            TextColor="#F4B400"/>
-                </Grid>
+               
 
                 <Button Text="Izvrši narudžbu"
                         HeightRequest="50"
